--- a/languages/stylesheet.css
+++ b/languages/stylesheet.css
@@ -95,6 +95,83 @@ body {
     cursor: pointer;
     fill: #d9e021;
 }
+
+.block-1 {
+    width: -webkit-fill-available;
+    display: grid;
+    grid-gap: 25px;
+    padding: 80px;
+}
+.title-h {
+    font-size: 42px;
+    font-weight: 700;
+    color: #333333;
+}
+.h1 {
+    font-size: 32px;
+    font-weight: 600;
+    color: #333333;
+}
+.h2 {
+    color: #333333;
+    font-size: 16px;
+    line-height: 140%;
+}
+.block-2 {
+    padding: 80px;
+    padding-top: 0px;
+}
+.table {
+    width: fit-content;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+}
+.button-lang {
+    color: #333333;
+    height: fit-content;
+    width: -webkit-fill-available;
+    display: flex;
+    -webkit-box-pack: justify;
+    border: 1px solid #d9d9d9;
+    padding: 1.5rem 2.1rem 1.5rem 1.5rem;
+    border-radius: 2px;
+    margin: 0px;
+    background-color: #f5f5f5;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    transition: 0.2s;
+}
+.button-lang:hover {
+    /*background-color: #c1c1c1;*/
+    cursor: pointer;
+    border: 1px solid #333333;
+    box-shadow: 4px 4px #e2e59c;
+}
+.table-image {
+    height: 50px;
+    margin-bottom: 40px;
+}
+.h-table-2 {
+    font-size: x-large;
+    font-weight: 500;
+}
+.h-table-1 {
+    text-transform: uppercase;
+    font-size: medium;
+    color: #555555;
+    line-height: 140%;
+    margin-bottom: 1.5rem;
+}
+/*.button-lang {*/
+/*    text-decoration: none;*/
+/*    border: none;*/
+/*    padding: 0;*/
+/*    margin: 0;*/
+/*    overflow: visible;*/
+/*}*/
+
 .menu-button {display: none}
 .mobile-menu {display: none}
 @media screen and (max-width: 840px) {
