--- a/en/what-is-yuamble/stylesheet.css
+++ b/en/what-is-yuamble/stylesheet.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Druk';
-    src: url('../assets/fonts/Druk/Druk Wide Bold.otf') format('opentype')
+    src: url('../../assets/fonts/Druk/Druk Wide Bold.otf') format('opentype')
 }
 body {
     margin: 0;
