--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,57 +1,274 @@
-@font-face {
-    font-family: 'Circular';
-    src: url("assets/fonts/CircularStd/CircularStd-Medium.ttf");
-    font-style: normal;
-    font-weight: 500;
-}
+/*@font-face {*/
+/*    font-family: 'Circular';*/
+/*    src: url("assets/fonts/CircularStd/CircularStd-Medium.ttf");*/
+/*    font-style: normal;*/
+/*    font-weight: 500;*/
+/*}*/
 
+/*@font-face {*/
+/*    font-family: 'Circular';*/
+/*    src: url("assets/fonts/CircularStd/CircularStd-Book.ttf");*/
+/*    font-style: normal;*/
+/*    font-weight: 400;*/
+/*}*/
+
+/*@font-face {*/
+/*    font-family: 'Circular';*/
+/*    src: url("assets/fonts/CircularStd/CircularStd-Bold.ttf");*/
+/*    font-style: normal;*/
+/*    font-weight: 700;*/
+/*}*/
+
+/*@font-face {*/
+/*    font-family: 'Circular';*/
+/*    src: url("assets/fonts/CircularStd/CircularStd-Black.ttf");*/
+/*    font-style: normal;*/
+/*    font-weight: 800;*/
+/*}*/
+
+/*@font-face {*/
+/*    font-family: 'Circular';*/
+/*    src: url("assets/fonts/CircularStd/CircularStd-MediumItalic.ttf");*/
+/*    font-style: italic;*/
+/*    font-weight: 500;*/
+/*}*/
+
+/*@font-face {*/
+/*    font-family: 'Circular';*/
+/*    src: url("assets/fonts/CircularStd/CircularStd-BookItalic.ttf");*/
+/*    font-style: italic;*/
+/*    font-weight: 400;*/
+/*}*/
+
+/*@font-face {*/
+/*    font-family: 'Circular';*/
+/*    src: url("assets/fonts/CircularStd/CircularStd-BoldItalic.ttf");*/
+/*    font-style: italic;*/
+/*    font-weight: 600;*/
+/*}*/
+
+/*@font-face {*/
+/*    font-family: 'Circular';*/
+/*    src: url("assets/fonts/CircularStd/CircularStd-BlackItalic.ttf");*/
+/*    font-style: italic;*/
+/*    font-weight: 700;*/
+/*}*/
+
+/* cyrillic-ext */
 @font-face {
-    font-family: 'Circular';
-    src: url("assets/fonts/CircularStd/CircularStd-Book.ttf");
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggqxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+}
+/* cyrillic */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggOxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* greek */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggSxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0370-03FF;
+}
+/* vietnamese */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggixSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggmxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggexSvfedN4.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+/* cyrillic-ext */
+@font-face {
+    font-family: 'Manrope';
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggqxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
-
+/* cyrillic */
 @font-face {
-    font-family: 'Circular';
-    src: url("assets/fonts/CircularStd/CircularStd-Bold.ttf");
+    font-family: 'Manrope';
     font-style: normal;
-    font-weight: 700;
-}
-
-@font-face {
-    font-family: 'Circular';
-    src: url("assets/fonts/CircularStd/CircularStd-Black.ttf");
-    font-style: normal;
-    font-weight: 800;
-}
-
-@font-face {
-    font-family: 'Circular';
-    src: url("assets/fonts/CircularStd/CircularStd-MediumItalic.ttf");
-    font-style: italic;
-    font-weight: 500;
-}
-
-@font-face {
-    font-family: 'Circular';
-    src: url("assets/fonts/CircularStd/CircularStd-BookItalic.ttf");
-    font-style: italic;
     font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggOxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
-
+/* greek */
 @font-face {
-    font-family: 'Circular';
-    src: url("assets/fonts/CircularStd/CircularStd-BoldItalic.ttf");
-    font-style: italic;
-    font-weight: 600;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggSxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0370-03FF;
 }
-
+/* vietnamese */
 @font-face {
-    font-family: 'Circular';
-    src: url("assets/fonts/CircularStd/CircularStd-BlackItalic.ttf");
-    font-style: italic;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggixSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggmxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggexSvfedN4.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+/* cyrillic-ext */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggqxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+}
+/* cyrillic */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggOxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* greek */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggSxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0370-03FF;
+}
+/* vietnamese */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggixSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggmxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggexSvfedN4.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+/* cyrillic-ext */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
     font-weight: 700;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggqxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+}
+/* cyrillic */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggOxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* greek */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggSxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0370-03FF;
+}
+/* vietnamese */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggixSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggmxSvfedN62Zw.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/manrope/v11/xn7gYHE41ni1AdIRggexSvfedN4.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 /*.Colors {*/
@@ -70,7 +287,8 @@ body {
     margin: 0;
     background-color: #ffffff;
     height: 150vh;
-    font-family: Circular, system-ui, -apple-system, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    /*letter-spacing: -0.8px;*/
+    font-family: 'Manrope', system-ui, -apple-system, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 }
 a:-webkit-any-link {
     text-decoration: none;
@@ -174,7 +392,7 @@ a:-webkit-any-link {
     96% { margin-top: -12.55em }
 }
 .button {
-    font-family: Circular, system-ui, -apple-system, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-family: 'Manrope', system-ui, -apple-system, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
     margin-top: 40px;
     border: solid 1px #333333;
     padding-top: 13px;
@@ -199,7 +417,7 @@ a:-webkit-any-link {
     color: #ffffff;
 }
 .button-2 {
-    font-family: Circular, system-ui, -apple-system, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-family: 'Manrope', system-ui, -apple-system, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
     margin-top: 40px;
     border: none;
     padding-top: 13px;
@@ -380,7 +598,7 @@ a:-webkit-any-link {
     margin-bottom: auto;
 }
 .button-3 {
-    font-family: Circular, system-ui, -apple-system, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-family: 'Manrope', system-ui, -apple-system, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
     margin-top: 40px;
     border: solid 1px #333333;
     padding-top: 8px;
@@ -406,7 +624,7 @@ a:-webkit-any-link {
     display: flex;
 }
 #button-github {
-    font-family: Circular, system-ui, -apple-system, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-family: 'Manrope', system-ui, -apple-system, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
     fill: #333333;
     transition: 0.2s;
 }
@@ -422,6 +640,7 @@ a:-webkit-any-link {
     background-color: white;
 }
 .table {
+    gap: 21px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
@@ -435,6 +654,7 @@ a:-webkit-any-link {
     align-items: flex-start;
     border: 2px solid;
     padding: 1.5rem;
+    border-radius: 12px;
 }
 .h-table-1 {
     font-size: 26px;
