--- a/stylesheet.css
+++ b/stylesheet.css
@@ -314,6 +314,7 @@ a:-webkit-any-link {
     margin-left: 25px;
     margin-right: 25px;
     border-radius: 15px;
+    backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     border: 1px solid rgb(232, 232, 232);
 }
